<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Połączenie i Sieć">
        <EditTextPreference
            app:key="server_url"
            app:title="@string/server_url"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="http://zephyr.proxy.rlwy.net:14192/dashboard/" />

        <SwitchPreferenceCompat
            app:key="desktop_mode"
            app:title="@string/desktop_mode"
            app:summary="@string/desktop_mode_summary"
            app:defaultValue="false" />

        <Preference
            app:key="clear_cache"
            app:title="@string/clear_cache"
            app:summary="@string/clear_cache_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Ekran i Interfejs">
        <SwitchPreferenceCompat
            app:key="keep_screen_on"
            app:title="@string/keep_screen_on"
            app:summary="@string/keep_screen_on_summary"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="immersive_mode"
            app:title="Tryb Pełnoekranowy"
            app:summary="Ukrywa pasek stanu i nawigacji"
            app:defaultValue="true" />

        <ListPreference
            app:key="orientation_lock"
            app:title="Blokada Orientacji"
            app:entries="@array/orientation_entries"
            app:entryValues="@array/orientation_values"
            app:defaultValue="0" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Funkcje Bota">
        <SwitchPreferenceCompat
            app:key="enable_js_bridge"
            app:title="Interfejs Skryptów"
            app:summary="Pozwala botowi wysyłać powiadomienia do Androida"
            app:defaultValue="true" />

        <EditTextPreference
            app:key="auto_refresh_interval"
            app:title="Auto-Odświeżanie (min)"
            app:summary="0 = wyłączone"
            app:defaultValue="0" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Dźwięki i Efekty">
        <SwitchPreferenceCompat
            app:key="enable_sound"
            app:title="Dźwięki Systemowe (Beep)"
            app:summary="Sygnały dźwiękowe przy akcjach"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="hacker_effects"
            app:title="Efekty Matrix"
            app:summary="Dodatkowe animacje interfejsu"
            app:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
